Test avant push en prod

--- a/public/admin/css/view.css
+++ b/public/admin/css/view.css
@@ -15,7 +15,7 @@ body {
 }
 
 #search {
-    width: 24% !important;
+    width: 20%;
     border-radius: 10px !important;
     height: 23px !important;
 }
