--- a/views/mangas/list_pages.ejs
+++ b/views/mangas/list_pages.ejs
@@ -54,7 +54,7 @@
                         <tr>
 
                             <td><%= chapter_pages[i].page.numbre_page %></td>
-                            <td><a href="<%= chapter_pages[i].page.scan %>"><img src="<%= chapter_pages[i].page.scan %>"
+                            <td><a href="<%= chapter_pages[i].page.scan %>"  target="_blank"><img src="<%= chapter_pages[i].page.scan %>"
                                         alt="" style="width: 20%;"></a>
                             </td>
 
