--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -53,10 +53,10 @@
 									placeholder="8 caratères max/ 1 chiffre/ 1 caratère spécial" required> </div>
 
 							<div class="form-group">
-								<label for="image">Image de profil </label>
+								<label for="image">Image de profil* </label>
 
 
-								<input type="file" class="form-control" name="image" id="image" value=""> </div>
+								<input type="file" class="form-control" name="image" id="image" value="" required> </div>
 
 							<input type="submit" value="Valider" class="btn btn-info btn-block">
 
