--- a/public/admin/css/interface.css
+++ b/public/admin/css/interface.css
@@ -11,7 +11,7 @@ body {
 }
 
 #search {
-  width: 24%;
+  width: 20%;
   border-radius: 10px;
   height: 23px;
 }
@@ -138,7 +138,7 @@ aside {
   font-size: 13px;
   text-align: -webkit-left;
   margin-top: 76px;
-  height: 50%;
+  /* height: 60%; */
 
 }
 
