--- a/views/admin/layouts/navbar.ejs
+++ b/views/admin/layouts/navbar.ejs
@@ -15,14 +15,19 @@
 
     <div class="nav-links">
         <a href="/mangas" >Listes des Mangas</a>
-        <%if (!utilities.empty(locals.user)) {%>
+        <%if (!utilities.empty(locals.user.email)) {%>
 
-        <%if (!utilities.empty(locals.user.email)) { %>
-            <a href="/list/favoris">Mes favoris</a>
-            <a href="/profil"><%=locals.user.username%></a>
-            <a href="/logout">Déconnexion</a>
+        <%if (locals.user.role === 1) { %>
+            <a href="/admin">Tableau de bord: Admin</a>
+
+        <%}else{%>
+        <a href="/list/favoris">Mes favoris</a>
+        <a href="/profil"><%=locals.user.username%></a>
         <%}%>
 
+
+
+        <a href="/logout">Déconnexion</a>
 
         <%}else{%>
        
