--- a/views/mangas/view_mangas.ejs
+++ b/views/mangas/view_mangas.ejs
@@ -107,6 +107,7 @@
      
 
     </div>
+    <%if (!utilities.empty(locals.user)) {%>
 
     <footer>
 
@@ -121,6 +122,7 @@
 
         <ul>
     </footer>
+    <% } %>
 
 
 
