--- a/views/mangas/list_mangas.ejs
+++ b/views/mangas/list_mangas.ejs
@@ -107,6 +107,13 @@
 
 
 
+    <footer style="
+    background: #4b5a6a;
+    color: white;
+    text-align: center;
+">
+        <a href="https://oceane97440.github.io/MonPortfolio/" target="_blanck"> © Copyright OceaneSautron</a>
+    </footer>
 
     <script src="/admin/js/search.js"></script>
 
