chagement url requête favorie vote

--- a/views/mangas/view_mangas.ejs
+++ b/views/mangas/view_mangas.ejs
@@ -187,7 +187,7 @@
             console.log(selected_value)
 
             let req = new XMLHttpRequest();
-            let url = "http://127.0.0.1:8890/vote";
+            let url = "https://manga-run974.herokuapp.com/vote";
 
             method = "POST";
             data = data = {
@@ -239,7 +239,7 @@
                     $('#img_like').attr('src', "/admin/img/like.png");
 
                     let req = new XMLHttpRequest();
-                    let url = "http://127.0.0.1:8890/favoris";
+                    let url = "https://manga-run974.herokuapp.com/favoris";
 
                     method = "POST";
                     data = data = {
@@ -263,7 +263,7 @@
 
                     $('#img_like').attr('src', "/admin/img/nolike.png");
                     let req = new XMLHttpRequest();
-                    let url = "http://127.0.0.1:8890/favoris";
+                    let url = "https://manga-run974.herokuapp.com/favoris";
 
                     method = "POST";
                     data = data = {
