--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -30,7 +30,9 @@
 
             <ul>
 
-                <li><a class="btn btn-success" href="/mangas/create"><i class="fas fa-plus-square"></i>  Ajouter une mangas</a></li>
+                <li><a class="btn btn-success" href="/mangas/create"><i class="fas fa-plus-square"></i>  Ajouter une mangas</a></li><br>
+                <li><a class="btn btn-primary" href="/mangas/category/create"><i class="fas fa-plus-square"></i>  Ajouter une categorie</a></li>
+
             </ul>
             <div class="row">
 
