action delete sur tout les items

--- a/views/mangas/list_chapter.ejs
+++ b/views/mangas/list_chapter.ejs
@@ -54,6 +54,8 @@
                                         class="fas fa-plus-square"></i></a>
                                 <a class="btn btn-warning" href="/mangas/pages/<%= mangas_chapters[i].chapter_id %>"><i
                                         class="fas fa-eye"></i></a>
+                                <a class="btn btn-danger" href="/delete/chapter/<%= mangas_chapters[i].chapter_id %>"><i
+                                        class="fas fa-trash-alt"></i></a>
 
 
                             </td>
