--- a/views/mangas/list_pages.ejs
+++ b/views/mangas/list_pages.ejs
@@ -54,13 +54,15 @@
                         <tr>
 
                             <td><%= chapter_pages[i].page.numbre_page %></td>
-                            <td><a href="<%= chapter_pages[i].page.scan %>"  target="_blank"><img src="<%= chapter_pages[i].page.scan %>"
-                                        alt="" style="width: 20%;"></a>
+                            <td><a href="<%= chapter_pages[i].page.scan %>" target="_blank"><img
+                                        src="<%= chapter_pages[i].page.scan %>" alt="" style="width: 20%;"></a>
                             </td>
 
                             <td><a class="btn btn-primary"
                                     href="/mangas/pages/create/<%= chapter_pages[i].chapter.chapter_id %>"><i
                                         class="fas fa-plus-square"></i></a>
+                                <a class="btn btn-danger" href="/delete/page/<%= chapter_pages[i].page.page_id %>"><i
+                                        class="fas fa-trash-alt"></i></a>
 
 
 
